{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 11,
  "lineage": "951cb0ae-462b-700e-dde8-d2bf67acbc06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:internet-gateway/igw-07c5262f58da393ac",
            "id": "igw-07c5262f58da393ac",
            "owner_id": "270871392297",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-01a1f2ea28a86e9a1"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:route-table/rtb-0198b860eefb9d335",
            "id": "rtb-0198b860eefb9d335",
            "owner_id": "270871392297",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1f2ea28a86e9a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:route-table/rtb-0067c57d0dcb1d67c",
            "id": "rtb-0067c57d0dcb1d67c",
            "owner_id": "270871392297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c5262f58da393ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a1f2ea28a86e9a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-gw",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b11f737385119aad",
            "route_table_id": "rtb-0198b860eefb9d335",
            "subnet_id": "subnet-0b24bd050d7b5499e"
          },
          "dependencies": [
            "aws_route_table.prime-priv-rt",
            "aws_subnet.prime-priv1",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0400e2a4afef419dd",
            "route_table_id": "rtb-0198b860eefb9d335",
            "subnet_id": "subnet-06ad74ca6dd7350a1"
          },
          "dependencies": [
            "aws_route_table.prime-priv-rt",
            "aws_subnet.prime-priv2",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da30c22bd363b40c",
            "route_table_id": "rtb-0067c57d0dcb1d67c",
            "subnet_id": "subnet-0397d8fcf8970e6e4"
          },
          "dependencies": [
            "aws_internet_gateway.prime-gw",
            "aws_route_table.prime-pub-rt",
            "aws_subnet.prime-pub",
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:subnet/subnet-0b24bd050d7b5499e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b24bd050d7b5499e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270871392297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-priv"
            },
            "tags_all": {
              "Name": "prime-priv"
            },
            "vpc_id": "vpc-01a1f2ea28a86e9a1"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:subnet/subnet-06ad74ca6dd7350a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ad74ca6dd7350a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270871392297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub"
            },
            "tags_all": {
              "Name": "private-sub"
            },
            "vpc_id": "vpc-01a1f2ea28a86e9a1"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:subnet/subnet-0397d8fcf8970e6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0397d8fcf8970e6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "270871392297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub"
            },
            "tags_all": {
              "Name": "prime-pub"
            },
            "vpc_id": "vpc-01a1f2ea28a86e9a1"
          },
          "dependencies": [
            "aws_vpc.prime-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270871392297:vpc/vpc-01a1f2ea28a86e9a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2f5895c5fe6a5a1",
            "default_route_table_id": "rtb-00d2225b6d5c084f1",
            "default_security_group_id": "sg-00101561f5ccbf029",
            "dhcp_options_id": "dopt-02832c6e533a661bf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a1f2ea28a86e9a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d2225b6d5c084f1",
            "owner_id": "270871392297",
            "tags": {
              "Name": "prime"
            },
            "tags_all": {
              "Name": "prime"
            }
          }
        }
      ]
    }
  ]
}